--- a/style/style.css
+++ b/style/style.css
@@ -51,6 +51,13 @@ body {
   margin: 0;
 }
 
+.form-control {
+  border-radius: 50px;
+  border: 0;
+  background: var(--white);
+  padding: 12px 20px 12px 20px;
+}
+
 .features-wrapper:hover .big-feature-card:not(:hover) {
   filter: blur(4px);
   transition: all 0.3 ease;
@@ -222,6 +229,10 @@ body {
 
 .mb-10 {
   margin-bottom: 10px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
 }
 
 .mb-20 {
