make form booking

--- a/style/style.css
+++ b/style/style.css
@@ -58,6 +58,17 @@ body {
   padding: 12px 20px 12px 20px;
 }
 
+.form-select {
+  border-radius: 50px;
+  border: 0;
+  padding: 12px 20px 12px 20px;
+  background: var(--white);
+  background-image: url("../images/ic_ad.svg");
+  background-repeat: no-repeat;
+  background-position: right 16px center;
+  background-size: 24px;
+}
+
 .features-wrapper:hover .big-feature-card:not(:hover) {
   filter: blur(4px);
   transition: all 0.3 ease;
